<resources>
    <string name="app_name">CoWork</string>
    <string name="title_activity_login">Sign in</string>

    <string name="facebook_app_id">1004973889555314</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to action bar titles -->
    <string name="select_location_fragment">Select a location</string>
    <string name="details_fragment">Fill in details</string>
    <string name="share_fragment">Share</string>

    <!-- Login shared preference file name -->
    <string name="login_shared_pref">LoginSharedPref</string>
    <string name="create_cowork_shared_pref">CreateCoworkSharedPref</string>
    <string name="database_shared_pref">DatabaseSharedPref</string>

    <!-- Strings related to HomeActivity -->
    <string name="create_cowork">Create</string>
    <string name="discover_cowork">Discover!</string>
    <string name="welcome_text1">Your coworking spaces will show up here</string>
    <string name="welcome_text2">Create now or discover one near you!</string>

    <!-- Strings related to DetailsFragment -->
    <string name="label_choose_activity">So, what are you doing?</string>
    <string name="label_duration">Duration</string>

    <!-- for now, will update later -->
    <string-array name="array_activities">
        <item>Reading</item>
        <item>Writing</item>
        <item>Coding</item>
        <item>Homework</item>
        <item>Painting</item>
    </string-array>
    <string name="label_description">Tell us more about it!</string>
    <string name="label_num_people">Max # of Co-Workers</string>
    <string name="label_one">One</string>
    <string name="label_two">Two</string>
    <string name="label_three">Three</string>
    <string name="label_four">Four</string>
    <string name="label_five">Five</string>

    <string-array name="array_duration">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>8 hours</item>
    </string-array>

    <!-- Strings related to SelectLocationFragment -->
    <string name="toast_drop_pin_message">Press and hold on map to drop pin</string>

    <!-- Strings related to ShareFragment -->
    <string name="label_share">Share with your friends!</string>

    <!-- Strings related to DiscoverActivity -->
    <string name="title_filter_dialog">Pick Activities</string>

    <!-- Common purpose -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
-->

    <!--
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Address: %2$s&lt;br/&gt;Phone: %3$s&lt;br/&gt;Website: %4$s</string>
-->

    <string name="place_details">&lt;i&gt;Address: %1$s&lt;br/&gt;Phone: %2$s&lt;br/&gt;Website: %3$s</string>

    <string name="title_activity_view_profile">ViewProfileActivity</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

</resources>
