<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vickey.cowork.DetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/label_choose_activity"/>

            <Spinner
                android:id="@+id/spinnerActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
            </Spinner>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="top|left"
                android:textSize="18dp"
                android:maxLength="200"
                android:hint="@string/label_description"/>

            <TextView
                android:id="@+id/textViewCharCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="16dp"
                android:text="@string/label_num_people"/>

            <Spinner
                android:id="@+id/spinnerPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/activity_vertical_margin">
            </Spinner>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_one"
                    android:id="@+id/radioButton1" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_two"
                    android:id="@+id/radioButton2" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_three"
                    android:id="@+id/radioButton3" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_four"
                    android:id="@+id/radioButton4" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_five"
                    android:id="@+id/radioButton5" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="16dp"
                android:text="@string/label_time"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableRight="@drawable/com_facebook_tooltip_blue_bottomnub"
                android:drawablePadding="20dp"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="@dimen/activity_vertical_margin">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="16dp"
                android:text="@string/label_date"/>

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/com_facebook_tooltip_blue_bottomnub"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawablePadding="20dp"
                android:textSize="18dp"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginTop="@dimen/activity_vertical_margin">
            </TextView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>